App2/src/objects/Carriages_of_Train_on_Route__c.object
<CustomObject>
    <fields>
        <fullName>Carriage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Carriage</label>
        <referenceTo>Carriage__c</referenceTo>
        <relationshipLabel>Carriages of Train on Route</relationshipLabel>
        <relationshipName>CarriageName</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Carriages of Train on Route</relationshipLabel>
        <relationshipName>RouteName</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Train__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Train</label>
        <referenceTo>Train__c</referenceTo>
        <relationshipLabel>Carriages of Train on Route</relationshipLabel>
        <relationshipName>TrainName</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Carriage of Train on Route</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carriages of Train on Route</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>